--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <header>      
-            <button id="toggle-form-btn" class="btn-primary">+ New Task</button>          
+        <header>
+             <button id="toggle-form-btn" class="btn-primary">+ New Task</button>
+            <button id="themeToggle">🌙 Dark Mode</button>
+                     
         </header>
 
         <main class="content-wrapper">
