--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <header>
+             <h1>📝 Todo List</h1>
              <button id="toggle-form-btn" class="btn-primary">+ New Task</button>
             <button id="themeToggle">🌙 Dark Mode</button>
                      
